--- a/WebClient/Client/src/app/app.component.html
+++ b/WebClient/Client/src/app/app.component.html
@@ -1,2 +1,3 @@
 <app-navbar [ngClass]="{'hidden': !isAuthorized}"></app-navbar>
+<notifier-container></notifier-container>
 <router-outlet></router-outlet>
