--- a/WebClient/Client/src/styles.scss
+++ b/WebClient/Client/src/styles.scss
@@ -3,6 +3,7 @@
 /* Importing Bootstrap SCSS file. */
 @import '~bootstrap/scss/bootstrap';
 @import "~bootstrap-icons/font/bootstrap-icons.css";
+@import "~angular-notifier/styles.css";
 
 body {
   background-color: whitesmoke !important;
