--- a/WebClient/Client/src/app/components/home/home.component.html
+++ b/WebClient/Client/src/app/components/home/home.component.html
@@ -1,8 +1,7 @@
 <div class="container home">
   <div class="sidenav card">
     <div class="directories-header card-header">
-      <input type="text" class="form-control" placeholder="Search"
-             [(ngModel)]="searchText" (ngModelChange)="search()">
+      <input #searchInput type="text" class="form-control" placeholder="Search">
       <button class="btn btn-dark" (click)="addDirectory()">
         <i class="bi bi-plus"></i>
       </button>
@@ -33,8 +32,12 @@
   </div>
 
   <div class="notes card">
-    <div class="card-body">
-      <app-notes-list [directoryId]="toDoDirectories[selectedIndex]?.id" (downloadPdf)="downloadPdf($event)"></app-notes-list>
+    <div class="card-header actions">
+      <button class="btn btn-dark" (click)="generatePdf(toDoDirectories[selectedIndex].id!)">
+        <i class="bi bi-file-pdf"></i>
+      </button>
     </div>
+
+    <app-notes-list [directoryId]="toDoDirectories[selectedIndex]?.id"></app-notes-list>
   </div>
 </div>
