--- a/WebClient/Client/src/app/components/shared/navbar/navbar.component.html
+++ b/WebClient/Client/src/app/components/shared/navbar/navbar.component.html
@@ -1,9 +1,13 @@
-<div class="container navbar">
-  <div class="start-aligned-items">
-    <a [routerLink]="['']" class="navbar-item">Home</a>
+<header class="navbar-container">
+  <div class="container navbar">
+    <div class="start-aligned-items">
+      <a [routerLink]="['']" class="navbar-item">Home</a>
+    </div>
+
+    <div class="end-aligned-items">
+      <a [routerLink]="['/auth/logout']" class="navbar-item">Logout</a>
+    </div>
   </div>
 
-  <div class="end-aligned-items">
-    <a [routerLink]="['/auth/logout']" class="navbar-item">Logout</a>
-  </div>
-</div>
+  <div class="loader" [ngClass]="{'display': loaderShown}"></div>
+</header>
