--- a/WebClient/Client/src/app/components/shared/navbar/navbar.component.scss
+++ b/WebClient/Client/src/app/components/shared/navbar/navbar.component.scss
@@ -1,31 +1,59 @@
 @import 'src/app/app-variables';
 
+$loader-width: 200px;
+
 :host {
   display: flex;
+  flex-direction: column;
   height: $navbar-height;
   background-color: #212529;
 }
-
-.navbar {
+.navbar-container {
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
 
-  & .navbar-item {
-    color: white;
-    padding: 0;
-    margin: 0;
-    cursor: pointer;
-  }
+  & .navbar {
+    display: flex;
+    justify-content: space-between;
 
-  & .start-aligned-items {
     & .navbar-item {
-      font-size: 1.3rem;
+      color: white;
+      padding: 0;
+      margin: 0;
+      cursor: pointer;
+    }
+
+    & .start-aligned-items {
+      & .navbar-item {
+        font-size: 1.3rem;
+      }
+    }
+
+    & .end-aligned-items {
+      & .navbar-item {
+        font-size: 1.1rem;
+      }
     }
   }
 
-  & .end-aligned-items {
-    & .navbar-item {
-      font-size: 1.1rem;
+  & .loader {
+    display: none;
+    width: $loader-width;
+    height: 3px;
+    animation: 1.5s linear 0s infinite running loading;
+
+    &.display {
+      display: block;
+      background-color: #3995f7;
     }
+  }
+}
+
+@keyframes loading {
+  from {
+    transform: translateX(-$loader-width);
+  }
+  to {
+    transform: translateX(calc(100vw + $loader-width));
   }
 }
